fix spacing and remove bloomer components

--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,10 @@
 
 }
 
+.user-friends {
+  gap: 10px;
+}
+
 .friends-container {
   row-gap: 14px;
   
